--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,4 +49,5 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
