--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,9 @@ dagger = "2.49"
 googleServices = "4.4.1"
 firebase = "32.7.4"
 firebaseFirestoreKtx = "24.10.3"
+workManager = "2.9.0"
+splashScreen = "1.0.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,8 +48,11 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
 firebaseAnalytics = { group = "com.google.firebase", name = "firebase-analytics" }
-firebaseAuth = {group = "com.google.firebase", name = "firebase-auth"}
+firebaseAuth = { group = "com.google.firebase", name = "firebase-auth" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+workManager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager"}
+splashScreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashScreen" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
