--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,9 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+vkRedirectScheme = "vk_redirect_scheme"
+vkClientId = "vk_id_client_id"
+vkClientSecret = "vk_id_client_secret"
+
+tgBotToken = "tg_bot_key"
