--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,7 +33,7 @@ loggingInterceptor = "4.9.3"
 esafirmImagePicker = "3.0.0"
 customSwitch = "0.0.3"
 shimmerLayout = "1.1"
-
+gradleSecrets = "2.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -75,6 +75,7 @@ loggingInterceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 esafirmImagePicker = { group = "com.github.esafirm", name = "android-image-picker", version.ref = "esafirmImagePicker" }
 customSwitch = { group = "com.github.zcweng", name = "switch-button", version.ref = "customSwitch" }
 shimmerLayout = { group = "xyz.peridy.shimmer", name = "shimmerlayout", version.ref = "shimmerLayout"}
+gradleSecrets = { group = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", name = "secrets-gradle-plugin", version.ref = "gradleSecrets"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -83,3 +84,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+gradleSecrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "gradleSecrets"}
