--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ appcompat = "1.6.1"
 material = "1.11.0"
 lifecycle = "2.7.0"
 glide = "4.16.0"
+coil = "3.0.0-rc01"
 navigation = "2.7.7"
 room = "2.6.1"
 coroutines = "1.7.1"
@@ -35,6 +36,7 @@ customSwitch = "0.0.3"
 shimmerLayout = "1.1"
 gradleSecrets = "2.0.1"
 safeArgs = "2.8.1"
+paging = "3.3.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +44,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+coil = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
 navigationFragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigationUi = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 roomRuntime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -78,6 +81,8 @@ customSwitch = { group = "com.github.zcweng", name = "switch-button", version.re
 shimmerLayout = { group = "xyz.peridy.shimmer", name = "shimmerlayout", version.ref = "shimmerLayout"}
 gradleSecrets = { group = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", name = "secrets-gradle-plugin", version.ref = "gradleSecrets"}
 safeArgs = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "safeArgs" }
+paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging"}
+roomPaging = { group = "androidx.room", name = "room-paging", version.ref = "room"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
